<?xml version="1.0" encoding="utf-8"?>
<ScrollView
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent">
<LinearLayout
  android:orientation="vertical"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent">
  <TextView
  android:id="@+id/settings_title"
  android:text="@string/SettingsTitle"
  android:layout_width="fill_parent"
  android:layout_height="wrap_content"
  android:layout_weight="1" 
  android:textSize="10pt" />
  <TextView
  android:id="@+id/smiurl_label"
  android:text="@string/SettingsSmiUrlLabel"
  android:layout_width="fill_parent"
  android:layout_height="wrap_content"
  android:layout_weight="2"  />
  <EditText
  android:id="@+id/smiurl"
  android:layout_width="fill_parent"
  android:layout_height="wrap_content"
  android:layout_weight="3" />
  <LinearLayout
  android:orientation="horizontal"
  android:layout_width="fill_parent"
  android:layout_height="wrap_content" >
  <Button
  android:id="@+id/restore_settings"
  android:text="@string/SettingsRestoreButton"
  android:layout_width="wrap_content"
  android:layout_height="wrap_content"
  android:layout_weight="4" />
  <Button
  android:id="@+id/save_settings"
  android:text="@string/SettingsSaveButton"
  android:layout_width="wrap_content"
  android:layout_height="wrap_content"
  android:layout_weight="4" />
  </LinearLayout>
</LinearLayout>
</ScrollView>