<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent" 
	android:layout_height="wrap_content" 
	android:soundEffectsEnabled="true" 
	android:orientation="vertical" 
	android:fitsSystemWindows="true"
	>
	<TextView 
		android:id="@+id/PartLoginTitle"
		android:layout_width="fill_parent" 
		android:layout_height="50px" 
		android:text="@string/PartLoginTitle" 
		android:textColor="#FFFFFF" 
		android:textStyle="bold" 
		android:textSize="12pt" 
		android:typeface="monospace" 
		android:focusable="false" 
		android:gravity="center_horizontal|center_vertical"
		/>
	<TextView 
		android:id="@+id/PartLoginEmailTitle"
		android:layout_width="fill_parent" 
		android:layout_height="wrap_content" 
		android:text="@string/PartLoginEmail" 
		android:focusable="false"
		/>
	<EditText 
		android:text="@+id/PartLoginEmail" 
		android:id="@+id/PartLoginEmail"
		android:layout_width="fill_parent" 
		android:layout_height="wrap_content" 
		/>
	<TextView 
		android:id="@+id/PartLoginPasswordTitle"
		android:layout_width="fill_parent" 
		android:layout_height="wrap_content" 
		android:text="@string/PartLoginPassword"
		android:focusable="false"/>
	<EditText 
		android:text="@+id/PartLoginPassword" 
		android:id="@+id/PartLoginPassword"
		android:layout_width="fill_parent" 
		android:layout_height="wrap_content" 
		android:typeface="normal" 
		android:password="true"
		/>
	<Button 
		android:text="@string/PartLoginButton" 
		android:id="@+id/PartLoginButton"
		android:layout_width="fill_parent" 
		android:layout_height="wrap_content" 
		android:clickable="true"
		/>
</LinearLayout>
