<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent" 
	android:layout_height="wrap_content" 
	android:soundEffectsEnabled="true" 
	android:orientation="vertical" 
	android:fitsSystemWindows="true"
	>
	<TextView 
		android:id="@+id/UpdateLoginTitle"
		android:layout_width="fill_parent" 
		android:layout_height="50px" 
		android:text="@string/UpdateLoginTitle" 
		android:textColor="#FFFFFF" 
		android:textStyle="bold" 
		android:textSize="10pt" 
		android:typeface="monospace" 
		android:focusable="false" 
		android:gravity="center_horizontal|center_vertical"
		/>
	<TextView 
		android:id="@+id/UpdateLoginEmailTitle"
		android:layout_width="fill_parent" 
		android:layout_height="wrap_content" 
		android:text="@string/UpdateLoginEmail" 
		android:focusable="false"
		/>
	<EditText 
		android:text="@+id/UpdateLoginEmail" 
		android:id="@+id/UpdateLoginEmail"
		android:layout_width="fill_parent" 
		android:layout_height="wrap_content" 
		/>
	<TextView 
		android:id="@+id/UpdateLoginPasswordTitle"
		android:layout_width="fill_parent" 
		android:layout_height="wrap_content" 
		android:text="@string/UpdateLoginPassword"
		android:focusable="false"/>
	<EditText 
		android:text="@+id/UpdateLoginPassword" 
		android:id="@+id/UpdateLoginPassword"
		android:layout_width="fill_parent" 
		android:layout_height="wrap_content" 
		android:typeface="normal" 
		android:password="true"
		/>
	<Button 
		android:text="@string/UpdateLoginButton" 
		android:id="@+id/UpdateLoginButton"
		android:layout_width="fill_parent" 
		android:layout_height="wrap_content" 
		android:clickable="true"
		/>
</LinearLayout>
